# idr_metadata_model

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
data/: Biosample.yaml  Genetic.yaml  SSBDProject.yaml  organism_query_sample.jsom
examples/: run_using_external_schema.py  search_genrate_linkml.py  unipro_protein.py
idrmetadatamodels/models/: cell_line_schema.yaml  image_schema.py  image_schema.yaml  license_schema.yaml  no_screen_study_schema.py  no_screen_study_schema.yaml  organism_part_schema.yaml  organism_schema.yaml  phenotype_schema.yaml  protein_schema.yaml  publication_schema.yaml  screen_study_schema.py  screen_study_schema.yaml  study_schema.py  study_schema.yaml
idrmetadatamodels/utils/: generate_validate_json_image_data.py  get_schema_attributes.py  idr_connector.py  query_builder.py
models/: antibody_schema.yaml  cell_line_schema.yaml  compound_schema.yaml  gene_schema.yaml  image_schema.py  image_schema.yaml  organism_schema.yaml  pathology_schema.yaml  phenotype_schema.yaml  protein_schema.yaml  siRNA_schema.yaml  study_schema.yaml
unit_tests/: test_app.py
unit_tests/test_data/: TestModel.py  TestModel.yaml
utils/: generate_validate_json_image_data.py  get_schema_attributes.py  idr_connector.py  query_builder.py
validation/: generate_validate_json_image_data.py  idr_connector.py
